--- a/credit_risk_resampling.ipynb
+++ b/credit_risk_resampling.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -284,14 +284,14 @@
        "[5 rows x 86 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Load the data\n",
-    "file_path = Path('../Resources/LoanStats_2019Q1.csv')\n",
+    "file_path = Path('./Resources/LoanStats_2019Q1.csv')\n",
     "df = pd.read_csv(file_path, skiprows=1)[:-2]\n",
     "df = df.loc[:, columns].copy()\n",
     "\n",
@@ -323,6 +323,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Deliverable 1: Use Resampling Models to Predict Credit Risk\n",
+    "# Data prep: Create the training variables by converting the string values into numerical ones using the get_dummies() method\n",
+    "\n",
+    "# List the columns and data types for only 'O' (Object) .. aka \"strings\"\n",
+    "df.select_dtypes(include='O').head()\n",
+    "\n",
+    "# Note: Column 'loan_status' (target[] defined above) is not included because this will excluded as part of the X feature\n",
+    "prepped_df = pd.get_dummies(df, columns=['home_ownership', 'verification_status', 'issue_d',\n",
+    "                                        'pymnt_plan', 'initial_list_status', 'next_pymnt_d',\n",
+    "                                        'application_type', 'hardship_flag', 'debt_settlement_flag'])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -331,21 +349,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create our features\n",
-    "X = # YOUR CODE HERE\n",
-    "\n",
+    "X = prepped_df.drop('loan_status', axis=1)\n",
     "\n",
     "# Create our target\n",
-    "y = # YOUR CODE HERE"
+    "y = prepped_df['loan_status']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +671,7 @@
        "[8 rows x 95 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -676,24 +693,36 @@
        "Name: loan_status, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Check the balance of our target values\n",
-    "y['loan_status'].value_counts()"
+    "y.value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({'low_risk': 51366, 'high_risk': 246})"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
-    "# YOUR CODE HERE"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=1)\n",
+    "Counter(y_train)"
    ]
   },
   {
@@ -722,28 +751,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Counter({'loan_status': 1})"
+       "Counter({'low_risk': 51366, 'high_risk': 51366})"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Resample the training data with the RandomOversampler\n",
-    "# YOUR CODE HERE"
+    "from imblearn.over_sampling import RandomOverSampler\n",
+    "ros = RandomOverSampler(random_state=1)\n",
+    "X_resampled, y_resampled = ros.fit_resample(X_train, y_train)\n",
+    "\n",
+    "Counter(y_resampled)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -752,62 +785,71 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Train the Logistic Regression model using the resampled data\n",
-    "# YOUR CODE HERE"
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "model = LogisticRegression(solver='lbfgs', random_state=1)\n",
+    "model.fit(X_resampled, y_resampled)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.646602844334948"
+       "0.6620175698580149"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Calculated the balanced accuracy score\n",
-    "# YOUR CODE HERE"
+    "from sklearn.metrics import balanced_accuracy_score\n",
+    "\n",
+    "balanced_accuracy_score(y_test, model.predict(X_test))\n",
+    "# 0.646602844334948"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[  75,   26],\n",
-       "       [7686, 9418]])"
+       "array([[   73,    28],\n",
+       "       [ 6820, 10284]], dtype=int64)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Display the confusion matrix\n",
-    "# YOUR CODE HERE"
+    "from sklearn.metrics import confusion_matrix\n",
+    "\n",
+    "y_pred = model.predict(X_test)\n",
+    "confusion_matrix(y_test, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -816,17 +858,18 @@
      "text": [
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "  high_risk       0.01      0.74      0.55      0.02      0.64      0.42       101\n",
-      "   low_risk       1.00      0.55      0.74      0.71      0.64      0.40     17104\n",
+      "  high_risk       0.01      0.72      0.60      0.02      0.66      0.44       101\n",
+      "   low_risk       1.00      0.60      0.72      0.75      0.66      0.43     17104\n",
       "\n",
-      "avg / total       0.99      0.55      0.74      0.71      0.64      0.40     17205\n",
+      "avg / total       0.99      0.60      0.72      0.75      0.66      0.43     17205\n",
       "\n"
      ]
     }
    ],
    "source": [
     "# Print the imbalanced classification report\n",
-    "# YOUR CODE HERE"
+    "from imblearn.metrics import classification_report_imbalanced\n",
+    "print(classification_report_imbalanced(y_test, y_pred))"
    ]
   },
   {
@@ -838,28 +881,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Counter({'loan_status': 1})"
+       "Counter({'low_risk': 51366, 'high_risk': 51366})"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Resample the training data with SMOTE\n",
-    "# YOUR CODE HERE"
+    "from imblearn.over_sampling import SMOTE\n",
+    "X_resampled, y_resampled = SMOTE(random_state=1, \n",
+    "                                 sampling_strategy='auto').fit_resample(X_train, y_train)\n",
+    "\n",
+    "# Validate the two samples are the same size\n",
+    "Counter(y_resampled)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -868,57 +916,60 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Train the Logistic Regression model using the resampled data\n",
-    "# YOUR CODE HERE"
+    "model = LogisticRegression(solver='lbfgs', random_state=1)\n",
+    "model.fit(X_resampled, y_resampled)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.662394124702461"
+       "0.6568196079430206"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Calculated the balanced accuracy score\n",
-    "# YOUR CODE HERE"
+    "y_pred = model.predict(X_test)\n",
+    "balanced_accuracy_score(y_test, y_pred)\n",
+    "# 0.662394124702461"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[   64,    37],\n",
-       "       [ 5283, 11821]])"
+       "array([[   62,    39],\n",
+       "       [ 5135, 11969]], dtype=int64)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Display the confusion matrix\n",
-    "# YOUR CODE HERE"
+    "confusion_matrix(y_test, y_pred)"
    ]
   },
   {
@@ -942,7 +993,7 @@
    ],
    "source": [
     "# Print the imbalanced classification report\n",
-    "# YOUR CODE HERE"
+    "print(classification_report_imbalanced(y_test, y_pred))"
    ]
   },
   {
@@ -964,16 +1015,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Counter({'loan_status': 1})"
+       "Counter({'high_risk': 246, 'low_risk': 246})"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -981,12 +1032,15 @@
    "source": [
     "# Resample the data using the ClusterCentroids resampler\n",
     "# Warning: This is a large dataset, and this step may take some time to complete\n",
-    "# YOUR CODE HERE"
+    "from imblearn.under_sampling import RandomUnderSampler\n",
+    "ros = RandomUnderSampler(random_state=1)\n",
+    "X_resampled, y_resampled = ros.fit_resample(X_train, y_train)\n",
+    "Counter(y_resampled)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -995,62 +1049,67 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Train the Logistic Regression model using the resampled data\n",
-    "# YOUR CODE HERE"
+    "from sklearn.linear_model import LogisticRegression\n",
+    "model = LogisticRegression(solver='lbfgs', random_state=1)\n",
+    "model.fit(X_resampled, y_resampled)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5442166848817717"
+       "0.6027679241263696"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Calculated the balanced accuracy score\n",
-    "# YOUR CODE HERE"
+    "from sklearn.metrics import balanced_accuracy_score\n",
+    "balanced_accuracy_score(y_test, model.predict(X_test))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[   68,    33],\n",
-       "       [10003,  7101]])"
+       "array([[   62,    39],\n",
+       "       [ 6984, 10120]], dtype=int64)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Display the confusion matrix\n",
-    "# YOUR CODE HERE"
+    "from sklearn.metrics import confusion_matrix\n",
+    "y_pred = model.predict(X_test)\n",
+    "confusion_matrix(y_test, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1059,17 +1118,18 @@
      "text": [
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "  high_risk       0.01      0.67      0.42      0.01      0.53      0.29       101\n",
-      "   low_risk       1.00      0.42      0.67      0.59      0.53      0.27     17104\n",
+      "  high_risk       0.01      0.61      0.59      0.02      0.60      0.36       101\n",
+      "   low_risk       1.00      0.59      0.61      0.74      0.60      0.36     17104\n",
       "\n",
-      "avg / total       0.99      0.42      0.67      0.58      0.53      0.27     17205\n",
+      "avg / total       0.99      0.59      0.61      0.74      0.60      0.36     17205\n",
       "\n"
      ]
     }
    ],
    "source": [
     "# Print the imbalanced classification report\n",
-    "# YOUR CODE HERE"
+    "from imblearn.metrics import classification_report_imbalanced\n",
+    "print(classification_report_imbalanced(y_test, y_pred))"
    ]
   },
   {
@@ -1091,16 +1151,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Counter({'loan_status': 1})"
+       "Counter({'high_risk': 68460, 'low_risk': 62011})"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1108,12 +1168,16 @@
    "source": [
     "# Resample the training data with SMOTEENN\n",
     "# Warning: This is a large dataset, and this step may take some time to complete\n",
-    "# YOUR CODE HERE"
+    "from imblearn.combine import SMOTEENN\n",
+    "\n",
+    "smote_enn = SMOTEENN(random_state=0)\n",
+    "X_resampled, y_resampled = smote_enn.fit_resample(X, y)\n",
+    "Counter(y_resampled)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1122,62 +1186,69 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Train the Logistic Regression model using the resampled data\n",
-    "# YOUR CODE HERE"
+    "from sklearn.linear_model import LogisticRegression\n",
+    "model = LogisticRegression(solver='lbfgs', random_state=1)\n",
+    "model.fit(X_resampled, y_resampled)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6400726134353378"
+       "0.6461148570422992"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Calculated the balanced accuracy score\n",
-    "# YOUR CODE HERE"
+    "from sklearn.metrics import balanced_accuracy_score\n",
+    "\n",
+    "balanced_accuracy_score(y_test, model.predict(X_test))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[  71,   30],\n",
-       "       [7232, 9872]])"
+       "array([[  73,   28],\n",
+       "       [7364, 9740]], dtype=int64)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Display the confusion matrix\n",
-    "# YOUR CODE HERE"
+    "from sklearn.metrics import confusion_matrix\n",
+    "\n",
+    "y_pred = model.predict(X_test)\n",
+    "confusion_matrix(y_test, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1186,25 +1257,20 @@
      "text": [
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "  high_risk       0.01      0.70      0.58      0.02      0.64      0.41       101\n",
-      "   low_risk       1.00      0.58      0.70      0.73      0.64      0.40     17104\n",
+      "  high_risk       0.01      0.72      0.57      0.02      0.64      0.42       101\n",
+      "   low_risk       1.00      0.57      0.72      0.72      0.64      0.41     17104\n",
       "\n",
-      "avg / total       0.99      0.58      0.70      0.73      0.64      0.40     17205\n",
+      "avg / total       0.99      0.57      0.72      0.72      0.64      0.41     17205\n",
       "\n"
      ]
     }
    ],
    "source": [
     "# Print the imbalanced classification report\n",
-    "# YOUR CODE HERE"
+    "from imblearn.metrics import classification_report_imbalanced\n",
+    "\n",
+    "print(classification_report_imbalanced(y_test, y_pred))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
